Fix build failure without zgc after JDK-8333300

XMLWordPrintable

    • b04

      The build is broken when zgc is disabled (--with-jvm-features=-zgc).

      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp: In member function 'bool CodeInstaller::pd_relocate(address, jint)':
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:224:63: error: 'ZBarrierRelocationFormatLoadGoodBeforeShl' was not declared in this scope
        224 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatLoadGoodBeforeShl);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:227:63: error: 'ZBarrierRelocationFormatLoadBadAfterTest' was not declared in this scope
        227 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatLoadBadAfterTest);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:230:63: error: 'ZBarrierRelocationFormatMarkBadAfterTest' was not declared in this scope
        230 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatMarkBadAfterTest);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:233:63: error: 'ZBarrierRelocationFormatStoreGoodAfterCmp' was not declared in this scope
        233 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatStoreGoodAfterCmp);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:236:63: error: 'ZBarrierRelocationFormatStoreBadAfterTest' was not declared in this scope
        236 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatStoreBadAfterTest);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:239:63: error: 'ZBarrierRelocationFormatStoreGoodAfterOr' was not declared in this scope
        239 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatStoreGoodAfterOr);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /data/jdk/src/hotspot/cpu/x86/jvmciCodeInstaller_x86.cpp:242:63: error: 'ZBarrierRelocationFormatStoreGoodAfterMov' was not declared in this scope
        242 | _instructions->relocate(pc, barrier_Relocation::spec(), ZBarrierRelocationFormatStoreGoodAfterMov);
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      gmake[3]: *** [lib/CompileJvm.gmk:168: /data/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/jvmciCodeInstaller_x86.o] Error 1
      gmake[3]: *** Waiting for unfinished jobs....
      /data/jdk/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:126:60: error: 'ZStoreBarrierEntry' was not declared in this scope; did you mean 'sizeof_ZStoreBarrierEntry'?
        126 | int CompilerToVM::Data::sizeof_ZStoreBarrierEntry = sizeof(ZStoreBarrierEntry);
            | ^~~~~~~~~~~~~~~~~~
            | sizeof_ZStoreBarrierEntry
      gmake[3]: *** [lib/CompileJvm.gmk:168: /data/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/jvmciCompilerToVMInit.o] Error 1
      gmake[2]: *** [make/Main.gmk:245: hotspot-server-libs] Error 2

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: