8334695: Fix build failure without zgc after JDK-8333300

Reviewed-by: dnsimon, chagedorn